--- a/Assessment1/Assessment1.csproj
+++ b/Assessment1/Assessment1.csproj
@@ -46,6 +46,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="shape.cs" />
+    <Compile Include="circle.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -54,6 +56,10 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="rectangle.cs" />
+    <Compile Include="ShapeFactory.cs" />
+    <Compile Include="ShapeInterface.cs" />
+    <Compile Include="traingle.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
