1. Menubar Added 2. Form Design Complexity Reduced 3. Console Added 4. Command Validation

--- a/Assessment1/Assessment1.csproj
+++ b/Assessment1/Assessment1.csproj
@@ -46,6 +46,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Check_Valid_Commands.cs" />
+    <Compile Include="Class1.cs" />
     <Compile Include="shape.cs" />
     <Compile Include="circle.cs" />
     <Compile Include="Form1.cs">
