--- a/Assessment1/Assessment1.csproj
+++ b/Assessment1/Assessment1.csproj
@@ -47,9 +47,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Check_Valid_Commands.cs" />
-    <Compile Include="Class1.cs" />
-    <Compile Include="shape.cs" />
-    <Compile Include="circle.cs" />
+    <Compile Include="Shape.cs" />
+    <Compile Include="Circle.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -58,10 +57,10 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="rectangle.cs" />
+    <Compile Include="Rectangle.cs" />
     <Compile Include="ShapeFactory.cs" />
     <Compile Include="ShapeInterface.cs" />
-    <Compile Include="traingle.cs" />
+    <Compile Include="Triangle.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -73,6 +72,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
